# RMSNormMMAttention-Triton

./: GEMINI.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
benchmarks/: benchmark_layernorm_fusion.py  benchmark_rmsnorm_fusion.py
src/mmattn_triton/: __init__.py  fused_layernorm.py  fused_rmsnorm.py  nn_torch.py
