[project]
name = "mmattn-triton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nan Lin", email = "nansense97@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.1",
    "jaxtyping>=0.3.3",
    "torch>=2.9.1",
    "triton>=3.5.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88  # Same as black
target-version = "py312"
lint.extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.extend-ignore = ["F722", "F821", "E731"]
fix = true

# Ignore files in .gitignore
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fm_energy"]
force-single-line = false
lines-after-imports = 2
